--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<h1><ui:insert name="title">DevOps class - Mathi - Version: 1.6.0 - 7th Nov 2021-Upstream-DownStream</ui:insert></h1>
+<h1><ui:insert name="title">DevOps class - Mathiazhagan - Version: 1.7.0 - 7th Nov 2021-Upstream-DownStream</ui:insert></h1>
 <p><ui:insert name="body">Just an example! - Webhook</ui:insert></p>
 </body>
 
